--- a/popup.html
+++ b/popup.html
@@ -43,99 +43,101 @@
         }
 
         body {
-            width: 360px;
-            min-height: 520px;
-            margin: 0;
-            padding: 24px;
-            background: var(--bg-gradient);
+            width: 480px;
+            height: 520px;
+            background: var(--bg-deep);
             color: var(--text-primary);
             font-family: var(--font-primary);
             letter-spacing: -0.2px;
-            position: relative;
-            box-sizing: border-box;
-            overflow-y: auto;
+            display: flex;
         }
 
-        body::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 160px;
-            background:
-                radial-gradient(circle at 70% 30%,
-                    rgba(233, 39, 29, 0.4) 0%,
-                    rgba(252, 119, 56, 0) 50%),
-                radial-gradient(circle at 30% 70%,
-                    rgba(26, 67, 69, 0.4) 0%,
-                    rgba(0, 0, 0, 0) 50%);
-            opacity: 0.5;
-            z-index: 0;
-            pointer-events: none;
+        .sidebar {
+            width: 64px;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.3);
+            border-right: 1px solid var(--border);
+            padding: 24px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .sidebar-item {
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+            color: var(--text-secondary);
+            transition: all 0.2s ease;
+            cursor: pointer;
+            position: relative;
+        }
+
+        .sidebar-item.active {
+            color: var(--text-primary);
+            background: var(--surface-dark);
+        }
+
+        .sidebar-item:hover {
+            color: var(--text-primary);
+            background: var(--surface-dark);
+        }
+
+        .sidebar-item .icon {
+            width: 20px;
+            height: 20px;
+            opacity: 0.8;
+        }
+
+        .main-content {
+            flex: 1;
+            padding: 24px;
+            background: var(--bg-gradient);
+            overflow-y: auto;
         }
 
         .header {
             margin-bottom: 32px;
-            position: relative;
-            z-index: 1;
         }
 
         .header h1 {
             margin: 0;
-            font-size: 42px;
+            font-size: 32px;
             font-weight: 600;
             background: var(--accent-gradient);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
-            letter-spacing: -1.5px;
-            line-height: 1;
-            position: relative;
+            letter-spacing: -1px;
         }
 
         .header p {
-            margin: 12px 0 0;
+            margin: 8px 0 0;
             color: var(--text-secondary);
             font-size: 15px;
             font-weight: 400;
             line-height: 1.4;
             max-width: 280px;
-            position: relative;
         }
 
         .section {
             margin-bottom: 24px;
             padding: 20px;
-            background: var(--glass-gradient);
+            background: var(--surface-dark);
             backdrop-filter: blur(24px);
             -webkit-backdrop-filter: blur(24px);
             border: 1px solid var(--border);
             border-radius: 16px;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            position: relative;
-            overflow: visible;
-            z-index: 1;
-        }
-
-        .section::before {
-            content: '';
-            position: absolute;
-            inset: -1px;
-            border-radius: 16px;
-            background: var(--accent-gradient);
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            z-index: -1;
         }
 
         .section:hover {
+            border-color: var(--border-hover);
             transform: translateY(-1px);
-            border-color: transparent;
-        }
-
-        .section:hover::before {
-            opacity: 0.1;
         }
 
         .section-title {
@@ -150,7 +152,6 @@
             font-size: 16px;
             font-weight: 500;
             color: var(--text-primary);
-            opacity: 0.9;
         }
 
         .api-key-container {
@@ -250,26 +251,20 @@
             display: flex;
             flex-direction: column;
             gap: 8px;
-            width: 100%;
             max-height: 240px;
             overflow-y: auto;
             padding-right: 4px;
-            padding-bottom: 4px;
-            position: relative;
-            z-index: 2;
-            margin-top: 8px;
         }
 
         .tag {
             display: flex;
             align-items: center;
             justify-content: space-between;
+            padding: 14px 16px;
             background: rgba(0, 0, 0, 0.3);
             border: 1px solid var(--border);
             border-radius: 12px;
-            padding: 14px 16px;
             transition: all 0.2s ease;
-            position: relative;
         }
 
         .tag:hover {
@@ -279,12 +274,8 @@
         }
 
         .tag-text {
-            font-weight: 400;
             color: var(--text-primary);
-            position: relative;
-            z-index: 1;
-            flex-grow: 1;
-            margin-right: 12px;
+            font-size: 14px;
         }
 
         .tag-delete {
@@ -375,48 +366,143 @@
         ::-webkit-scrollbar-thumb:hover {
             background: var(--border-hover);
         }
+
+        /* Add tab content styles */
+        .tab-content {
+            display: none;
+            animation: fadeIn 0.3s ease;
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(4px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Settings styles */
+        .settings-content {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .settings-button {
+            width: 100%;
+            padding: 14px;
+            background: rgba(0, 0, 0, 0.3);
+            border: 1px solid var(--border);
+            border-radius: 12px;
+            color: var(--text-primary);
+            font-family: var(--font-primary);
+            font-size: 14px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .settings-button:hover {
+            border-color: var(--border-hover);
+            background: rgba(0, 0, 0, 0.35);
+            transform: translateY(-1px);
+        }
+
+        .settings-button:active {
+            transform: translateY(0);
+        }
+
+        #clearCache {
+            background: var(--teal-primary);
+            border-color: transparent;
+        }
+
+        #resetSettings {
+            background: var(--old-brick);
+            border-color: transparent;
+        }
+
+        #clearCache:hover {
+            background: rgba(26, 67, 69, 0.8);
+        }
+
+        #resetSettings:hover {
+            background: rgba(145, 26, 36, 0.8);
+        }
     </style>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Semantic Mute</h1>
-        <p>Enhance your feed with intelligent content filtering powered by AI</p>
-    </div>
-
-    <div class="section">
-        <div class="section-title">
-            <svg class="icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M12 14.5V16.5M7 10.0288C7.47142 10 8.05259 10 8.8 10H15.2C15.9474 10 16.5286 10 17 10.0288M7 10.0288C6.41168 10.0647 5.99429 10.1455 5.63803 10.327C5.07354 10.6146 4.61462 11.0735 4.32698 11.638C4 12.2798 4 13.1198 4 14.8V16.2C4 17.8802 4 18.7202 4.32698 19.362C4.61462 19.9265 5.07354 20.3854 5.63803 20.673C6.27976 21 7.11984 21 8.8 21H15.2C16.8802 21 17.7202 21 18.362 20.673C18.9265 20.3854 19.3854 19.9265 19.673 19.362C20 18.7202 20 17.8802 20 16.2V14.8C20 13.1198 20 12.2798 19.673 11.638C19.3854 11.0735 18.9265 10.6146 18.362 10.327C18.0057 10.1455 17.5883 10.0647 17 10.0288M7 10.0288V8C7 5.23858 9.23858 3 12 3C14.7614 3 17 5.23858 17 8V10.0288"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <h2>OpenAI Key</h2>
-        </div>
-        <div class="api-key-container">
-            <input type="password" id="apiKey" placeholder="Enter your OpenAI key to get started">
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="section-title">
+    <div class="sidebar">
+        <div class="sidebar-item active" data-tab="mute">
             <svg class="icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M18 18L12 12M12 12L6 6M12 12L18 6M12 12L6 18" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-            <h2>Mute Categories</h2>
         </div>
-        <div class="tag-section">
-            <div class="tag-input-container">
-                <input type="text" class="tag-input" id="tagInput" placeholder="Type a category and press Enter">
-            </div>
-            <div class="tag-container" id="tagContainer">
-                <!-- Tags will be added here -->
-            </div>
+        <div class="sidebar-item" data-tab="settings">
+            <svg class="icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                <path
+                    d="M19.4 15C19.2669 15.3016 19.2272 15.6362 19.286 15.9606C19.3448 16.285 19.4995 16.5843 19.73 16.82L19.79 16.88C19.976 17.0657 20.1235 17.2863 20.2241 17.5291C20.3248 17.7719 20.3766 18.0322 20.3766 18.295C20.3766 18.5578 20.3248 18.8181 20.2241 19.0609C20.1235 19.3037 19.976 19.5243 19.79 19.71C19.6043 19.896 19.3837 20.0435 19.1409 20.1441C18.8981 20.2448 18.6378 20.2966 18.375 20.2966C18.1122 20.2966 17.8519 20.2448 17.6091 20.1441C17.3663 20.0435 17.1457 19.896 16.96 19.71L16.9 19.65C16.6643 19.4195 16.365 19.2648 16.0406 19.206C15.7162 19.1472 15.3816 19.1869 15.08 19.32C14.7842 19.4468 14.532 19.6572 14.3543 19.9255C14.1766 20.1938 14.0813 20.5082 14.08 20.83V21C14.08 21.5304 13.8693 22.0391 13.4942 22.4142C13.1191 22.7893 12.6104 23 12.08 23C11.5496 23 11.0409 22.7893 10.6658 22.4142C10.2907 22.0391 10.08 21.5304 10.08 21V20.91C10.0723 20.579 9.96512 20.258 9.77251 19.9887C9.5799 19.7194 9.31074 19.5143 9 19.4C8.69838 19.2669 8.36381 19.2272 8.03941 19.286C7.71502 19.3448 7.41568 19.4995 7.18 19.73L7.12 19.79C6.93425 19.976 6.71368 20.1235 6.47088 20.2241C6.22808 20.3248 5.96783 20.3766 5.705 20.3766C5.44217 20.3766 5.18192 20.3248 4.93912 20.2241C4.69632 20.1235 4.47575 19.976 4.29 19.79C4.10405 19.6043 3.95653 19.3837 3.85588 19.1409C3.75523 18.8981 3.70343 18.6378 3.70343 18.375C3.70343 18.1122 3.75523 17.8519 3.85588 17.6091C3.95653 17.3663 4.10405 17.1457 4.29 16.96L4.35 16.9C4.58054 16.6643 4.73519 16.365 4.794 16.0406C4.85282 15.7162 4.81312 15.3816 4.68 15.08C4.55324 14.7842 4.34276 14.532 4.07447 14.3543C3.80618 14.1766 3.49179 14.0813 3.17 14.08H3C2.46957 14.08 1.96086 13.8693 1.58579 13.4942C1.21071 13.1191 1 12.6104 1 12.08C1 11.5496 1.21071 11.0409 1.58579 10.6658C1.96086 10.2907 2.46957 10.08 3 10.08H3.09C3.42099 10.0723 3.742 9.96512 4.0113 9.77251C4.28059 9.5799 4.48572 9.31074 4.6 9C4.73312 8.69838 4.77282 8.36381 4.714 8.03941C4.65519 7.71502 4.50054 7.41568 4.27 7.18L4.21 7.12C4.02405 6.93425 3.87653 6.71368 3.77588 6.47088C3.67523 6.22808 3.62343 5.96783 3.62343 5.705C3.62343 5.44217 3.67523 5.18192 3.77588 4.93912C3.87653 4.69632 4.02405 4.47575 4.21 4.29C4.39575 4.10405 4.61632 3.95653 4.85912 3.85588C5.10192 3.75523 5.36217 3.70343 5.625 3.70343C5.88783 3.70343 6.14808 3.75523 6.39088 3.85588C6.63368 3.95653 6.85425 4.10405 7.04 4.29L7.1 4.35C7.33568 4.58054 7.63502 4.73519 7.95941 4.794C8.28381 4.85282 8.61838 4.81312 8.92 4.68H9C9.29577 4.55324 9.54802 4.34276 9.72569 4.07447C9.90337 3.80618 9.99872 3.49179 10 3.17V3C10 2.46957 10.2107 1.96086 10.5858 1.58579C10.9609 1.21071 11.4696 1 12 1C12.5304 1 13.0391 1.21071 13.4142 1.58579C13.7893 1.96086 14 2.46957 14 3V3.09C14.0013 3.41179 14.0966 3.72618 14.2743 3.99447C14.452 4.26276 14.7042 4.47324 15 4.6C15.3016 4.73312 15.6362 4.77282 15.9606 4.714C16.285 4.65519 16.5843 4.50054 16.82 4.27L16.88 4.21C17.0657 4.02405 17.2863 3.87653 17.5291 3.77588C17.7719 3.67523 18.0322 3.62343 18.295 3.62343C18.5578 3.62343 18.8181 3.67523 19.0609 3.77588C19.3037 3.87653 19.5243 4.02405 19.71 4.21C19.896 4.39575 20.0435 4.61632 20.1441 4.85912C20.2448 5.10192 20.2966 5.36217 20.2966 5.625C20.2966 5.88783 20.2448 6.14808 20.1441 6.39088C20.0435 6.63368 19.896 6.85425 19.71 7.04L19.65 7.1C19.4195 7.33568 19.2648 7.63502 19.206 7.95941C19.1472 8.28381 19.1869 8.61838 19.32 8.92V9C19.4468 9.29577 19.6572 9.54802 19.9255 9.72569C20.1938 9.90337 20.5082 9.99872 20.83 10H21C21.5304 10 22.0391 10.2107 22.4142 10.5858C22.7893 10.9609 23 11.4696 23 12C23 12.5304 22.7893 13.0391 22.4142 13.4142C22.0391 13.7893 21.5304 14 21 14H20.91C20.5882 14.0013 20.2738 14.0966 20.0055 14.2743C19.7372 14.452 19.5268 14.7042 19.4 15Z"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
         </div>
     </div>
 
-    <div id="status" class="status"></div>
+    <div class="main-content">
+        <div class="header">
+            <h1>Semantic Mute</h1>
+            <p>Enhance your feed with intelligent content filtering powered by AI</p>
+        </div>
+
+        <div id="mute-tab" class="tab-content active">
+            <div class="section">
+                <div class="section-title">
+                    <h2>Mute Categories</h2>
+                </div>
+                <div class="tag-section">
+                    <div class="tag-input-container">
+                        <input type="text" id="tagInput" class="tag-input"
+                            placeholder="Add a category to mute (press Enter)" />
+                    </div>
+                    <div id="tagContainer" class="tag-container">
+                        <!-- Tags will be added here -->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="settings-tab" class="tab-content">
+            <div class="section">
+                <div class="section-title">
+                    <h2>OpenAI API Key</h2>
+                </div>
+                <div class="api-key-container">
+                    <input type="password" id="apiKey" placeholder="Enter your OpenAI API key" />
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="section-title">
+                    <h2>Settings</h2>
+                </div>
+                <div class="settings-content">
+                    <button id="clearCache" class="settings-button">Clear Cache</button>
+                    <button id="resetSettings" class="settings-button">Reset Settings</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="popup.js"></script>
 </body>
